<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arenafight"
            android:textSize="7mm"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textViewTitle"
            app:layout_constraintHorizontal_bias="0.497"
            tools:ignore="InOrMmUsage" android:layout_marginTop="40dp"/>
    <Button
            android:text="@string/jouer"
            android:backgroundTint="@color/red2"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonPlay"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84"/>
    <Button
            android:id="@+id/btnNouveau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nouveau_personnage"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.229"/>
    <Spinner
            android:id="@+id/SpinnerClasse"
            android:layout_width="250dp"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlay" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" app:layout_constraintVertical_bias="0.415"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/pv"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content" android:id="@+id/textViewPV"
            tools:ignore="MissingConstraints" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/SpinnerClasse" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.267"/>
    <TextView
            android:text="@string/atq"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content" android:id="@+id/textViewATQ"
            tools:ignore="MissingConstraints" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewPV" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.262"/>
    <TextView
            android:text="@string/niveau"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content" android:id="@+id/textViewLV"
            tools:ignore="MissingConstraints" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDEF" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.252"
    />
    <TextView
            android:text="@string/def"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content" android:id="@+id/textViewDEF"
            tools:ignore="MissingConstraints" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewATQ" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.264"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" android:id="@+id/textInputLayout"
            android:layout_marginTop="60dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/editTextNom"
                android:textColor="@color/white"
                android:layout_height="55dp"
                android:hint="@string/Nom"
                android:inputType="textPersonName"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>